--- a/README
+++ b/README
@@ -10,3 +10,5 @@ Original author page: http://taint.org/2009/07/01/105859a.html
 This is a fork:
 + Some layout fixes of delicious results.
 + Maximum 20 results will be displayed from the delicious search.
+
+Questions? nicu.merge.prin.fum@gmail.com
